--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
       <scope>test</scope>
     </dependency>
    
-<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java  -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java 
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.9-rc</version>
-</dependency>  
+    <version>8.0.8-dmr</version>
+</dependency>   -->
   </dependencies>
   
 </project>
